# json_stream_parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  json_parse.py  jsonparser.cpp  parse.py  pyproject.toml
.github/workflows/: uv.yml
cpp_src/: bindings.cpp  jsonparser.cpp  jsonparser.h
legacy/: setup.py
streamyjson/: __init__.py  _json_parse.py  json_parse.py
tests/: test.py
tests/cpp/: test.cpp
