[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "streamyjson"
version = "0.0.1"
description = "A fast C++ JSON parser with Python bindings"
authors = [
    { name = "JSON Parser Author", email = "author@example.com" }
]
dependencies = [
    "pybind11 >=2.5.0",
    "setuptools>=78.1.0",
]

[tool.scikit-build]
wheel = {}
sdist = {}

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "20"

requires-python = ">=3.13"