[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "streamyjson"
version = "0.0.1"
description = "A fast C++ JSON parser with Python bindings"
authors = [
    { name = "JSON Parser Author", email = "author@example.com" }
]
requires-python = ">=3.13"

[tool.scikit-build]
wheel = {}
sdist = {}

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "20"
